Fix visiblity bug

--- a/src/static/content/content.css
+++ b/src/static/content/content.css
@@ -61,11 +61,11 @@
 }
 
 .gbs-visible {
-  visibility: visible;
+  display: block;
 }
 
 .gbs-hidden {
-  visibility: hidden;
+  display: none;
 }
 
 input[type='submit'] {
